2013-08-11  0.8     Initial release

2013-08-12  0.9     Script no longer compresses files added with -a/--add.  It
                    still lists and reads compressed (.gz) files as before.