@@ -1,7 +1,14 @@
 To implement a for loop:
 for file in `ls .`;
-do echo 'file';
-echo 'found';
+    do echo 'file';
+    echo 'found';
 done
 
-@todo: if (esp. file/directory)
+To implement a case command:
+case "$1"
+in
+    0) echo "zero found";;
+    1) echo "one found";;
+    2) echo "two found";;
+    3) echo "three found";;
+esac
