@@ -1,0 +1,2 @@
+To cut out the third field of text or stdoutput that is delimited by a #:
+cut -d# -f3
