@@ -11,4 +11,4 @@ To find files by octal permission:
 find . -type f -perm 777
 
 To find files with setuid bit set:
-find . -xdev ( -perm -4000 ) -type f -print0 | xargs -0 ls -l
+find . -xdev \( -perm -4000 \) -type f -print0 | xargs -0 ls -l
