@@ -4,5 +4,5 @@ split file.txt -l 1000
 To split a large binary file into smaller files of 10M each:
 split file.txt -b 10M
 
-To consolidate split files into a single file:
+To consolidate split files into a single file: 
 cat x* > file.txt
